# Copyright (C) 2008 John R. Rose.
# Copyright (C) 2012 Damien Raude-Morvan
# This package may be used for any
# purpose, provided that this copyright notice is preserved intact.

# THIS PACKAGE IS PROVIDED "AS IS" AND WITHOUT ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
# WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.

AUTOMAKE_OPTIONS = foreign

lib_LTLIBRARIES = hsdis.la
hsdis_la_SOURCES = base-hsdis.c
hsdis_la_LDFLAGS = -module -no-undefined
